Misc warning cleanup